[gd_scene load_steps=61 format=3 uid="uid://thgpiubtb6jr"]

[ext_resource type="Script" uid="uid://cvfuxvkonim2f" path="res://Base Classes/characters_base.gd" id="1_ijj7t"]
[ext_resource type="Texture2D" uid="uid://ci26gm3jjreom" path="res://Assets/characters/Luffy/Luffy Idle.png" id="2_hrijp"]
[ext_resource type="Texture2D" uid="uid://cwf6hfr0v3td4" path="res://Assets/characters/Luffy/Luffy Hurt.png" id="2_mvi5u"]
[ext_resource type="Texture2D" uid="uid://tgcgr5im1ca5" path="res://Assets/characters/Luffy/Luffy running.png" id="3_y8sh0"]
[ext_resource type="Script" uid="uid://cuphmdf6an1o" path="res://Components/State Machine/StateMachine.gd" id="4_12g3y"]
[ext_resource type="Texture2D" uid="uid://clpllugro5y2t" path="res://Assets/characters/Luffy/Luffy Combo 1.png" id="4_a5t21"]
[ext_resource type="Script" uid="uid://dir70pvd02ddx" path="res://Components/State Machine/States/IdleState.gd" id="5_mvi5u"]
[ext_resource type="Script" uid="uid://hoaeba16oskd" path="res://Components/HealthComponent.gd" id="6_jqbla"]
[ext_resource type="Script" uid="uid://fgmhp3kxwffj" path="res://Components/State Machine/States/HurtState.gd" id="7_o58gf"]
[ext_resource type="Script" uid="uid://do7cdddyfs8b1" path="res://Components/HurtBox.gd" id="7_swalr"]
[ext_resource type="Script" uid="uid://b8ng301yyd7ll" path="res://Components/HitBox.gd" id="8_12g3y"]
[ext_resource type="Script" uid="uid://dn0c2kt68xel5" path="res://Components/State Machine/States/JumpState.gd" id="9_kyl8q"]
[ext_resource type="Script" uid="uid://dbacihi2gmwbj" path="res://Components/State Machine/States/FallState.gd" id="10_w1514"]
[ext_resource type="Script" uid="uid://bdrc0s32clmrj" path="res://Components/State Machine/States/MeleeAttackStateBase.gd" id="11_w1514"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ncima"]
atlas = ExtResource("2_mvi5u")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_sbnp8"]
atlas = ExtResource("2_mvi5u")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_jqbla"]
atlas = ExtResource("2_hrijp")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_swalr"]
atlas = ExtResource("2_hrijp")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_12g3y"]
atlas = ExtResource("2_hrijp")
region = Rect2(0, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_mvlyn"]
atlas = ExtResource("4_a5t21")
region = Rect2(384, 384, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_5myah"]
atlas = ExtResource("4_a5t21")
region = Rect2(512, 384, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_o56v7"]
atlas = ExtResource("4_a5t21")
region = Rect2(0, 512, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_d3u2y"]
atlas = ExtResource("4_a5t21")
region = Rect2(128, 512, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_smnxx"]
atlas = ExtResource("4_a5t21")
region = Rect2(256, 512, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_gfqwm"]
atlas = ExtResource("4_a5t21")
region = Rect2(384, 512, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_q7etv"]
atlas = ExtResource("4_a5t21")
region = Rect2(512, 512, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_00n5j"]
atlas = ExtResource("4_a5t21")
region = Rect2(0, 640, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_sr7hq"]
atlas = ExtResource("4_a5t21")
region = Rect2(128, 640, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_4voys"]
atlas = ExtResource("4_a5t21")
region = Rect2(256, 640, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_qltux"]
atlas = ExtResource("4_a5t21")
region = Rect2(384, 640, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_nrvyq"]
atlas = ExtResource("4_a5t21")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_tj2c4"]
atlas = ExtResource("4_a5t21")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_dnusc"]
atlas = ExtResource("4_a5t21")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_trjf2"]
atlas = ExtResource("4_a5t21")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_2uykg"]
atlas = ExtResource("4_a5t21")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ngafh"]
atlas = ExtResource("4_a5t21")
region = Rect2(0, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_sgm03"]
atlas = ExtResource("4_a5t21")
region = Rect2(128, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_cv5yf"]
atlas = ExtResource("4_a5t21")
region = Rect2(256, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_kfbtj"]
atlas = ExtResource("4_a5t21")
region = Rect2(384, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_h3q3v"]
atlas = ExtResource("4_a5t21")
region = Rect2(512, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_h0qg6"]
atlas = ExtResource("4_a5t21")
region = Rect2(0, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ki0d2"]
atlas = ExtResource("4_a5t21")
region = Rect2(128, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_dy5ka"]
atlas = ExtResource("4_a5t21")
region = Rect2(256, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1djh"]
atlas = ExtResource("4_a5t21")
region = Rect2(384, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_7vvdu"]
atlas = ExtResource("4_a5t21")
region = Rect2(512, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_tgnxo"]
atlas = ExtResource("4_a5t21")
region = Rect2(0, 384, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ucrjr"]
atlas = ExtResource("4_a5t21")
region = Rect2(128, 384, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_xrd5i"]
atlas = ExtResource("4_a5t21")
region = Rect2(256, 384, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_mvi5u"]
atlas = ExtResource("3_y8sh0")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_o58gf"]
atlas = ExtResource("3_y8sh0")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_a5t21"]
atlas = ExtResource("3_y8sh0")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ltpi0"]
atlas = ExtResource("3_y8sh0")
region = Rect2(0, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_kyl8q"]
atlas = ExtResource("3_y8sh0")
region = Rect2(128, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_w1514"]
atlas = ExtResource("3_y8sh0")
region = Rect2(256, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_4x3kj"]
atlas = ExtResource("3_y8sh0")
region = Rect2(0, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_e2hre"]
atlas = ExtResource("3_y8sh0")
region = Rect2(128, 256, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_ncima"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ncima")
}],
"loop": true,
"name": &"hurt1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sbnp8")
}],
"loop": true,
"name": &"hurt2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jqbla")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_swalr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_12g3y")
}],
"loop": true,
"name": &"idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mvlyn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5myah")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o56v7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d3u2y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_smnxx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gfqwm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q7etv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_00n5j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sr7hq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4voys")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qltux")
}],
"loop": true,
"name": &"jet_palm",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nrvyq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tj2c4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dnusc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_trjf2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2uykg")
}],
"loop": false,
"name": &"left_punch",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ngafh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sgm03")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cv5yf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kfbtj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h3q3v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h0qg6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ki0d2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dy5ka")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1djh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7vvdu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tgnxo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ucrjr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xrd5i")
}],
"loop": true,
"name": &"rifle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mvi5u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o58gf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a5t21")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ltpi0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kyl8q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w1514")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4x3kj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e2hre")
}],
"loop": true,
"name": &"run",
"speed": 8.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ijj7t"]
radius = 18.0
height = 66.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_12g3y"]
size = Vector2(38, 65)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mvi5u"]
size = Vector2(40, 66)

[node name="Luffy" type="CharacterBody2D" node_paths=PackedStringArray("sprite", "stateMachine", "hurtbox", "hitbox")]
script = ExtResource("1_ijj7t")
sprite = NodePath("AnimatedSprite2D")
stateMachine = NodePath("StateMachine")
hurtbox = NodePath("HurtBox")
hitbox = NodePath("HitBox")
metadata/_custom_type_script = "uid://co1o2a63mu1kj"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ncima")
animation = &"jet_palm"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(1, 3)
shape = SubResource("CapsuleShape2D_ijj7t")

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("4_12g3y")
metadata/_custom_type_script = "uid://dq0do27vtv6ik"

[node name="IdleState" type="Node" parent="StateMachine"]
script = ExtResource("5_mvi5u")
animationName = Array[String](["idle"])
metadata/_custom_type_script = "uid://bo11uo47h4dil"

[node name="HurtState" type="Node" parent="StateMachine"]
script = ExtResource("7_o58gf")
animationName = Array[String](["hurt1", "hurt2"])
metadata/_custom_type_script = "uid://ckni4s85e7nul"

[node name="JumpState" type="Node" parent="StateMachine"]
script = ExtResource("9_kyl8q")
animationName = Array[String](["jump"])
metadata/_custom_type_script = "uid://t3riyad2iq5e"

[node name="FallState" type="Node" parent="StateMachine"]
script = ExtResource("10_w1514")
animationName = Array[String](["fall"])
metadata/_custom_type_script = "uid://7gm7kso6ovuy"

[node name="LightAttack" type="Node" parent="StateMachine"]

[node name="LightAttack1State" type="Node" parent="StateMachine/LightAttack"]
script = ExtResource("11_w1514")
comboName = "light"
actionName = &"attack 1"
animationName = Array[String](["left_punch"])
metadata/_custom_type_script = "uid://dnuqscb2k1arl"

[node name="LightAttack2State" type="Node" parent="StateMachine/LightAttack"]
script = ExtResource("11_w1514")
comboName = "light"
actionName = &"attack 1"
animationName = Array[String](["rifle"])
metadata/_custom_type_script = "uid://dnuqscb2k1arl"

[node name="LightAttack3State" type="Node" parent="StateMachine/LightAttack"]
script = ExtResource("11_w1514")
comboName = "light"
actionName = &"attack 1"
animationName = Array[String](["jet_palm"])
metadata/_custom_type_script = "uid://dnuqscb2k1arl"

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("6_jqbla")
health = 10
metadata/_custom_type_script = "uid://dxolowo8wnp07"

[node name="HurtBox" type="Area2D" parent="." node_paths=PackedStringArray("healthComponent")]
visible = false
script = ExtResource("7_swalr")
healthComponent = NodePath("../HealthComponent")
metadata/_custom_type_script = "uid://dul0n5x83yrhk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(1, 2.5)
shape = SubResource("RectangleShape2D_12g3y")
debug_color = Color(0.97344, 0, 0.433973, 0.42)

[node name="HitBox" type="Area2D" parent="."]
visible = false
script = ExtResource("8_12g3y")
metadata/_custom_type_script = "uid://6vrp6qpwpndh"

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(10, 3)
shape = SubResource("RectangleShape2D_mvi5u")
